syntax = "proto3";

package wolfyttv.event;
option go_package = "github.com/wolfymaster/wolfyttv/buf";

import "common.proto";

service EventService {
    rpc CreateUserEvent(CreateUserEventRequest) returns (CreateUserEventResponse);
}

message UserEvent {
    string user_id = 1;
    string display_name = 2;
    string event_type = 3;
    oneof event {
        BitCheerEvent bit_cheer = 4;
        MessageEvent message = 5;
        SubscibeEvent subscribe = 6;
        FollowEvent follow = 7;
    }
}

message CreateUserEventRequest {
    UserEvent event = 1;
}

message CreateUserEventResponse {
    common.ResponseStatus status = 1;
    UserEvent event = 2;
}

message BitCheerEvent {
    int32 amount = 1;
}

message MessageEvent {
    string message = 1;
}

message SubscibeEvent {
    string tier = 1; 
    bool gift = 2;
}

message FollowEvent {
    string follow_date = 1;
}